--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.2.5",
+    "@mantine/hooks": "^5.2.5",
+    "@mantine/next": "^5.2.5",
+    "@tabler/icons": "^1.92.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "tabler-icons-react": "^1.54.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "babel-plugin-styled-components": "^2.0.7",
     "typescript": "^4.7.4"
   }
 }
